2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texlive.h: New file with additional code for TeX Live,
	#included from config.h, such that we can #undef _Noreturn.
	* configure.ac: Adapted.

2014-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Fix dependencies for build "on demand".

2014-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* paper-size.c, data/paper.cfg: Allow comments in config file.

2014-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* paper-size.c, data/paper.cfg: Modify and document the config
	file format.  Close the config file.

2014-01-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import psutils-1.23.
	* version.ac: Adapted.

	* README (new): PostScript Utilities for TeX Live.
	* paper-size.c (new): Implement paper_size().
	* progname.[ch], verror.[ch]: New files simulating gnulib.
	* binary-io.h, xvasprintf.h (new): Empty.
	* configure.ac: Additional code for config.h.
	* Makefile.am: Adapted.

	* psutils.test: The test now needs environment variables.

2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, /ac/withenable.ac, configure.ac:
	Replace libs/paper => libs/libpaper.

2013-12-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* psutils.test (psresize): Test for '-0.000000' also at start.

2013-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Use getopt() from kpathsea.
	* psutils.test: Add psnup test using GNU extension (-18).
	* tests/playnup1.2, tests/playsel1.2: Additional test results.

2013-10-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import psutils-1.21.
	* version.ac: New file.
	* Makefile.am, ac/withenable.ac, configure.ac: Adapt.

	* psutils.test: Add paper size (-pa4) for psnup and pstops.